--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <center><h1>Halloww mpaaa</h1></center>
         <center><h2>tonton video dibawah ini sampe akhir ya, jangan di skip jugaa.</h2></center>
         <center><video width="320" height="240" controls>
-  <source src="VID20240717201026.mp4" type="video/mp4">
-</video>
-</center>
+            <source src="VID20240717201026.mp4" type="video/mp4">
+            Teks ini akan muncul jika browser tidak mendukung tag video.
+          </video></center>
           <center><h1>jawabnya nanti aja kalo ketemu, Maaf.</h1></center>
         <center><img src="5a74dc1edc469d9a6d985338f1cdd230.jpg" width="400" height="350" alt="bogeng"/></center>
     </body>
