--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <center><h1>Halloww mpaaa</h1></center>
         <center><h2>tonton video dibawah ini sampe akhir ya, jangan di skip jugaa.</h2></center>
         <center><video width="320" height="240" controls>
-            <source src="VID20240717201026.mp4" type="video/mp4">
+            <source src="VID20240717201026 (1).mp4" type="video/mp4">
             Teks ini akan muncul jika browser tidak mendukung tag video.
           </video></center>
           <center><h1>jawabnya nanti aja kalo ketemu, Maaf.</h1></center>
