--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body style="background-color:pink;"></body>
     <body>
         <center><h1>Halloww mpaaa</h1></center>
-        <center><h2>tonton video dibawah ini sampe akhir ya, jangan di skip jugaa.</h2></center>
+        <center><h2>ini ada video buat kamu, aku simpen di google drive
+        soalnya filenya besar, di klik ya.</h2></center>
         <center><video width="320" height="240" controls>
             <source src="VID20240717201026 (1).mp4" type="video/mp4">
             Teks ini akan muncul jika browser tidak mendukung tag video.
