--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
         <center><h1>Halloww mpaaa</h1></center>
         <center><h2>ini ada video buat kamu, aku simpen di google drive
         soalnya filenya besar, di klik ya.</h2></center>
-        <center><video width="320" height="240" controls>
-            <source src="VID20240717201026 (1).mp4" type="video/mp4">
-            Teks ini akan muncul jika browser tidak mendukung tag video.
-          </video></center>
+        <center><h2>https://drive.google.com/drive/folders/1W6CjFkr03DYyWEq9c3nCvEdHsTU666gn?usp=drive_link</h2></center>
           <center><h1>jawabnya nanti aja kalo ketemu, Maaf.</h1></center>
         <center><img src="5a74dc1edc469d9a6d985338f1cdd230.jpg" width="400" height="350" alt="bogeng"/></center>
     </body>
