--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <body style="background-color:pink;"></body>
     <body>
         <center><h1>Halloww mpaaa</h1></center>
-        <center><h2>ini ada video buat kamu, aku simpen di google drive
-        soalnya filenya besar, di klik ya.</h2></center>
-        <center><h2>https://drive.google.com/drive/folders/1W6CjFkr03DYyWEq9c3nCvEdHsTU666gn?usp=drive_link</h2></center>
+        <center><h2>klik tombol di bawah ini yaa.</h2></center>
+        <center><form actionhttps://drive.google.com/drive/folders/1W6CjFkr03DYyWEq9c3nCvEdHsTU666gn?usp=drive_link"><input type="submit" value="Nama Button"></form></center>
           <center><h1>jawabnya nanti aja kalo ketemu, Maaf.</h1></center>
         <center><img src="5a74dc1edc469d9a6d985338f1cdd230.jpg" width="400" height="350" alt="bogeng"/></center>
     </body>
