--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <center><h1>Halloww mpaaa</h1></center>
         <center><h2>klik tombol di bawah ini yaa.</h2></center>
-        <center><form action="https://drive.google.com/drive/folders/1W6CjFkr03DYyWEq9c3nCvEdHsTU666gn?usp=drive_link"><input type="submit" value="Nama Button"></form></center>
+        <center><form action="https://drive.google.com/drive/folders/1W6CjFkr03DYyWEq9c3nCvEdHsTU666gn?usp=drive_link"><input type="submit" value="click this"></form></center>
           <center><h1>jawabnya nanti aja kalo ketemu, Maaf.</h1></center>
         <center><img src="5a74dc1edc469d9a6d985338f1cdd230.jpg" width="400" height="350" alt="bogeng"/></center>
+         <center><h2>lov u!.</h2></center>
     </body>
 </html>
